media/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: media
  labels:
    app: qbittorrent
    app.kubernetes.io/name: qbittorrent
    app.kubernetes.io/instance: qbittorrent
    app.kubernetes.io/component: downloader
    app.kubernetes.io/part-of: media
    app.kubernetes.io/managed-by: kustomize
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
        app.kubernetes.io/name: qbittorrent
        app.kubernetes.io/instance: qbittorrent
        app.kubernetes.io/component: downloader
        app.kubernetes.io/part-of: media
        app.kubernetes.io/managed-by: kustomize
      annotations:
        backup.velero.io/backup-volumes-excludes: qbittorrent-media
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      securityContext:
        fsGroup: 65533
      volumes:
        - name: qbittorrent-config
          persistentVolumeClaim:
            claimName: qbittorrent-config-pvc
        - name: qbittorrent-gluetun
          persistentVolumeClaim:
            claimName: qbittorrent-gluetun-pvc
        - name: qbittorrent-media
          persistentVolumeClaim:
            claimName: pvc-media-nfs
        - name: dev-net-tun
          hostPath:
            path: /dev/net/tun
            type: CharDevice
      containers:
        - name: gluetun
          image: qmcgaw/gluetun:v3.41.3 # {"$imagepolicy": "flux-system:gluetun-image-policy"}
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true
            capabilities:
              add:
                - NET_ADMIN
          volumeMounts:
            - name: qbittorrent-gluetun
              mountPath: /gluetun
            - name: dev-net-tun
              mountPath: /dev/net/tun
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:version-5.1.4-r0 # {"$imagepolicy": "flux-system:qbittorrent-image-policy"}
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 5
          ports:
            - name: http
              containerPort: 8080
            - name: peer-tcp
              containerPort: 6881
            - name: peer-udp
              containerPort: 6881
              protocol: UDP
          volumeMounts:
            - name: qbittorrent-config
              mountPath: /config
            - name: qbittorrent-media
              mountPath: /media
            - name: qbittorrent-gluetun
              mountPath: /gluetun
              readOnly: true
          securityContext:
            privileged: true
            runAsUser: 0
            runAsGroup: 0
            allowPrivilegeEscalation: true
            capabilities:
              add:
                - CHOWN
                - FOWNER
                - SETGID
                - SETUID
        - name: mousehole
          image: tmmrtn/mousehole:0 # {"$imagepolicy": "flux-system:mousehole-image-policy"}
          imagePullPolicy: IfNotPresent
          ports:
            - name: mousehole-http
              containerPort: 5010
              protocol: TCP
          volumeMounts:
            - name: qbittorrent-config
              mountPath: /srv/mousehole
              subPath: mousehole
