media/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-svc
  namespace: media
spec:
  selector:
    app: qbittorrent
  ports:
    - name: http
      port: 8080
      targetPort: 8080
