media/qbittorrent/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent-ingressroute
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`torrent.macbytes.io`)
      kind: Rule
      services:
        - name: qbittorrent-svc
          port: 8080
  tls:
    secretName: qbittorrent-tls-certificate
